Keyboard Appears automatically when a text has to be inserted. Soft layout rezises the window, so the buttons are visible when the keyboard is open.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,7 +24,8 @@
         </activity>
         <activity
             android:name="com.template.localreminder.AddItemActivity"
-            android:label="@string/title_activity_additem" >
+            android:label="@string/title_activity_additem" 
+            android:windowSoftInputMode="adjustResize">
         </activity>
     </application>
 
