--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,8 +24,7 @@
         </activity>
         <activity
             android:name="com.template.localreminder.ChangeDataSetActivity"
-            android:label="@string/title_activity_change_dataset"
-            android:windowSoftInputMode="adjustResize" >
+            android:label="@string/title_activity_change_dataset" >
         </activity>
         <activity
             android:name="com.template.localreminder.DisplayItemActivity"
